@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  05 Dec 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Obey the pppd noauth option, #104869 thanks to Bram Verweij.
+
 * baselayout-1.12.6 (02 Nov 2006)
 
   02 Nov 2006; Roy Marples <uberlord@gentoo.org>:
